# allianceauth-corptools-finances

./: .coveragerc  .isort.cfg  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  pyproject.toml  tox.ini
.github/workflows/: automated-checks.yml
finances/: __init__.py  apps.py  auth_hooks.py  urls.py  views.py
finances/templates/finances/: base.html  index.html
testauth/settings/: local.py
